data/objects/Contract_CEN__c.object
<CustomObject>
    <fields>
        <fullName>Accounting_Changes_Notes__c</fullName>
        <inlineHelpText>Max 3000 Characters</inlineHelpText>
        <label>Accounting Changes Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Accounting_ID__c</fullName>
        <label>Accounting ID</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Addendum_Effective_Date__c</fullName>
        <label>Addendum Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addendum_Type__c</fullName>
        <label>Addendum Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Autorenew</fullName>
                </value>
                <value>
                    <fullName>Change Order</fullName>
                </value>
                <value>
                    <fullName>Contract Type Update</fullName>
                </value>
                <value>
                    <fullName>Deferral</fullName>
                </value>
                <value>
                    <fullName>EPO</fullName>
                </value>
                <value>
                    <fullName>Measure Conversion</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>QS Extension</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Auto_Renew_Cancelation_Deadline__c</fullName>
        <label>Auto Renew Cancelation Deadline</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Renew_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Auto Renew Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Auto_Renew_Trigger_Date__c</fullName>
        <formula>Billing_Schedule_End_Date__c - 90</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used for triggering the Auto Renew process.</inlineHelpText>
        <label>Auto Renew Trigger Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Auto_Renew__c</fullName>
        <label>Auto Renew</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Base_Year_End__c</fullName>
        <label>Base Year End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Base_Year_Start__c</fullName>
        <label>Base Year Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billable_Term__c</fullName>
        <description>Previously Billable Term</description>
        <label>Billable Term Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Billing_Cycle__c</fullName>
        <label>Billing Cycle</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Billing_Schedule_End_Date__c</fullName>
        <label>Billing Schedule End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Start_Date__c</fullName>
        <label>Billing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Billing_Term_Calc__c</fullName>
        <formula>IF(
    OR(
        ISBLANK(Billable_Term__c),
        Billable_Term__c = 0
    ),
    Contract_Term__c -
    (
        (YEAR(Billing_Start_Date__c) - YEAR(Contract_Start_Date__c)) * 12 +
        (MONTH(Billing_Start_Date__c) - MONTH(Contract_Start_Date__c))
    ),
    Billable_Term__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Term (Calc)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Client_Specified_ES_Salary__c</fullName>
        <label>Client Specified ES Salary</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Company_SIgned_Date__c</fullName>
        <label>Company SIgned Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Company_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Company Signed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contract_Fiscal_Year__c</fullName>
        <label>Contract Fiscal Year</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Start_Date__c</fullName>
        <label>Contract Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Status__c</fullName>
        <label>Contract Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Expired</fullName>
                </value>
                <value>
                    <fullName>Terminated</fullName>
                </value>
                <value>
                    <fullName>Closed Lost</fullName>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                    <isActive>false</isActive>
                    <label>Inactive</label>
                </value>
                <value>
                    <fullName>Negotiation</fullName>
                    <isActive>false</isActive>
                    <label>Negotiation</label>
                </value>
                <value>
                    <fullName>Signed</fullName>
                    <isActive>false</isActive>
                    <label>Signed</label>
                </value>
                <value>
                    <fullName>Signed/Not Executed</fullName>
                    <isActive>false</isActive>
                    <label>Signed/Not Executed</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Term__c</fullName>
        <description>Previously Contract Term</description>
        <label>Contract Term Months</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Fixed</fullName>
                </value>
                <value>
                    <fullName>Fixed-ES</fullName>
                </value>
                <value>
                    <fullName>Var Fixed</fullName>
                </value>
                <value>
                    <fullName>Var Fixed-ES</fullName>
                </value>
                <value>
                    <fullName>Split Fee</fullName>
                </value>
                <value>
                    <fullName>Performance Fee</fullName>
                </value>
                <value>
                    <fullName>Turnkey</fullName>
                </value>
                <value>
                    <fullName>Turnkey-R</fullName>
                </value>
                <value>
                    <fullName>Turnkey-S</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Used when working with Addenda. Represents the original contract that the addenda are associated with.</inlineHelpText>
        <label>Contract</label>
        <referenceTo>Contract_CEN__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Billing_Schedule__c</fullName>
        <label>Create Billing Schedule</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_On__c</fullName>
        <label>Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Customer_Signed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Signed By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Customer Signer</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Signed_Date__c</fullName>
        <label>Customer Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>D365ContractGuid__c</fullName>
        <externalId>true</externalId>
        <label>D365ContractGuid</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <label>Discount %</label>
        <precision>5</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Employed_By__c</fullName>
        <label>ES Employed By</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Client</fullName>
                </value>
                <value>
                    <fullName>Cenergistic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ES_FT__c</fullName>
        <label># ES FT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_PT__c</fullName>
        <label># ES PT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ES_Salary_Recommendation__c</fullName>
        <label>ES Salary Recommendation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Energy_Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Energy Program</label>
        <referenceTo>Energy_Program__c</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Estimated_Net_Total_Contract_Value_Calc__c</fullName>
        <label>Estimated Net Total Contract Value Calc</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Net_Total_Contract_Value__c</fullName>
        <label>Estimated Net Total Contract Value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Executive_Annual_Allocation__c</fullName>
        <label>Executive Annual Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fax_Copy_Received__c</fullName>
        <label>Fax Copy Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Fixed_Annual_Fee__c</fullName>
        <label>Fixed Annual Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Monthly_Fee__c</fullName>
        <label>Fixed Monthly Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>GreenX_Annual_Allocation__c</fullName>
        <label>GreenX Annual Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Fee_PY1__c</fullName>
        <label>Gross Monthly Fee PY1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Fee_PY2__c</fullName>
        <label>Gross Monthly Fee PY2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Monthly_Fee_PY3__c</fullName>
        <label>Gross Monthly Fee PY3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Gross_Total_Contract_Value__c</fullName>
        <label>Gross Total Contract Value</label>
        <precision>12</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hard_Contract_Copy_Received__c</fullName>
        <label>Hard Contract Copy Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_PY_End__c</fullName>
        <label>Last PY End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Legal_Counsel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Legal Counsel</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Contracts (Legal Counsel)</relationshipLabel>
        <relationshipName>ContractsLegal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Matrix_Cost_Per_Visit__c</fullName>
        <label>Matrix Cost Per Visit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Measure_Annual_Allocation__c</fullName>
        <label>Measure Annual Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>NTC_Fees__c</fullName>
        <label>NTC Fees</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CEN covers NTC Fees - No Reimbursement</fullName>
                </value>
                <value>
                    <fullName>CEN Reimburse Client for NTC Fees</fullName>
                </value>
                <value>
                    <fullName>Client Reimburse CEN for NTC Fees</fullName>
                </value>
                <value>
                    <fullName>Client Covers NTC Fees - No Reimbursement</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Name__c</fullName>
        <label>Name</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>No_ECAP_Fee_Payments__c</fullName>
        <label># eCAP Fee Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_ECAP_Renewal_Payments__c</fullName>
        <label>Number ECAP Renewal Payments</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_by_Contract_Start_Date_Asc__c</fullName>
        <label>Order by Contract Start Date Asc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_by_Contract_Start_Date_Desc__c</fullName>
        <label>Order by Contract Start Date Desc</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Organization_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Organization Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Original_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Links to the Opportunity that preceded the contract creation.</inlineHelpText>
        <label>Original Opportunity</label>
        <lookupFilter>
            <active>false</active>
            <errorMessage>Please select a Closed Won Opportunity</errorMessage>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>equals</operation>
                <value>Closed Won</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.Type</field>
                <operation>notEqual</operation>
                <value>Renewal, CONV-Renewal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts</relationshipLabel>
        <relationshipName>Contracts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Other_Changes_Notes__c</fullName>
        <label>Other Changes Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PL_RS_Special_Provisions__c</fullName>
        <label>PL RS Special Provisions</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PY_1_Start__c</fullName>
        <label>PY 1 Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Perf_Fee__c</fullName>
        <label>Perf Fee %</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Proposal_Total_Gross_Savings__c</fullName>
        <label>Proposal Total Gross Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Push_to_D365__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Push to D365</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QS_End__c</fullName>
        <label>QS End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QS_Months__c</fullName>
        <label>QS Months</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>QS_Start__c</fullName>
        <label>QS Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>QS_Type__c</fullName>
        <description>Previously QS Type</description>
        <label>Billing Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Quick Start</fullName>
                </value>
                <value>
                    <fullName>Delayed Billing</fullName>
                </value>
                <value>
                    <fullName>Shorten Billing</fullName>
                </value>
                <value>
                    <fullName>Standard</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                    <isActive>false</isActive>
                    <label>Other</label>
                </value>
                <value>
                    <fullName>Renewal</fullName>
                    <isActive>false</isActive>
                    <label>Renewal</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Declined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Declined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Renewal Opportunity</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>notEqual</operation>
                <value>Closed Won, Closed Lost</value>
            </filterItems>
            <filterItems>
                <field>Opportunity.Type</field>
                <operation>equals</operation>
                <value>Renewal, CONV-Renewal</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Contracts (Renewal Opportunity)</relationshipLabel>
        <relationshipName>ContractsRenewal</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal__c</fullName>
        <label>Renewal</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Yes_No</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SI_Special_Requirements__c</fullName>
        <label>SI Special Requirements</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SharePoint_Path__c</fullName>
        <formula>Organization_Name__r.Name &amp; &quot;/Signed Contract&quot;</formula>
        <inlineHelpText>Used for PDF Butler SharePoint integration to determine path to SharePoint file location.</inlineHelpText>
        <label>SharePoint Path</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Simulate_Annual_Allocation__c</fullName>
        <label>Simulate Annual Allocation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Software_Type__c</fullName>
        <label>Software Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Measure</fullName>
                </value>
                <value>
                    <fullName>ECAP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Dates_Comments__c</fullName>
        <label>Special Dates Comments</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Active_Inactive</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_ESs__c</fullName>
        <description>Total ESs: ES_FT +ES_PT</description>
        <formula>ES_FT__c  +  ES_PT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total ESs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <inlineHelpText>Designates if is a full Contract or an Addendum to the contract.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contract</fullName>
                </value>
                <value>
                    <fullName>Addendum</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unique_Contract_ID__c</fullName>
        <formula>IF(
  AND(
    NOT(ISBLANK(Accounting_ID__c)),
    NOT(ISBLANK(Contract_Start_Date__c))
  ),
  Accounting_ID__c &amp; TEXT(Contract_Start_Date__c),
  &quot;&quot;
)</formula>
        <label>Unique Contract ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unique_Special_Provisions__c</fullName>
        <label>Unique Special Provisions</label>
        <length>10000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Visits_per_Month__c</fullName>
        <label>Visits per Month</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Year_10_Gross_Savings__c</fullName>
        <label>Year 10 Gross Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_1_Gross_Savings__c</fullName>
        <label>Year 1 Gross Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Year_2_Gross_Savings__c</fullName>
        <label>Year 2 Gross Savings</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>eCAP_Maintenance_Fee__c</fullName>
        <label>eCAP Maintenance Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>eCAP_Software_Fee__c</fullName>
        <label>eCAP Software Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Contract</label>
    <listViews>
        <fullName>Addendums</fullName>
        <columns>NAME</columns>
        <columns>Auto_Renew__c</columns>
        <columns>Name__c</columns>
        <columns>Addendum_Effective_Date__c</columns>
        <columns>Addendum_Type__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Addendum</value>
        </filters>
        <label>All Addendums</label>
    </listViews>
    <listViews>
        <fullName>All_ACTIVE_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Energy_Program__c</columns>
        <columns>Name__c</columns>
        <columns>Auto_Renew__c</columns>
        <columns>Billing_Cycle__c</columns>
        <columns>Legal_Counsel__c</columns>
        <columns>Billing_Start_Date__c</columns>
        <columns>Billing_Schedule_End_Date__c</columns>
        <columns>Contract_Term__c</columns>
        <columns>Organization_Name__c</columns>
        <columns>Base_Year_End__c</columns>
        <columns>Base_Year_Start__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Contract_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <label>All ACTIVE Contracts</label>
    </listViews>
    <listViews>
        <fullName>All_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Contract_Status__c</columns>
        <columns>Name__c</columns>
        <columns>Billing_Start_Date__c</columns>
        <columns>Billing_Schedule_End_Date__c</columns>
        <columns>Organization_Name__c</columns>
        <columns>Base_Year_End__c</columns>
        <columns>Base_Year_Start__c</columns>
        <columns>Contract__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>ES_Employed_By__c</columns>
        <columns>ES_Salary_Recommendation__c</columns>
        <columns>Fixed_Monthly_Fee__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <label>All Contracts</label>
    </listViews>
    <listViews>
        <fullName>All_INACTIVE_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Name__c</columns>
        <columns>Auto_Renew__c</columns>
        <columns>Billing_Cycle__c</columns>
        <columns>Billing_Start_Date__c</columns>
        <columns>Billing_Schedule_End_Date__c</columns>
        <columns>Contract_Term__c</columns>
        <columns>Organization_Name__c</columns>
        <columns>Base_Year_End__c</columns>
        <columns>Base_Year_Start__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contract__c</columns>
        <columns>Created_On__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Inactive</value>
        </filters>
        <label>All INACTIVE Contracts</label>
    </listViews>
    <listViews>
        <fullName>Contracts_Analysis_Shams</fullName>
        <columns>NAME</columns>
        <columns>Billing_Schedule_End_Date__c</columns>
        <columns>Contract__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Name__c</columns>
        <columns>Organization_Name__c</columns>
        <columns>Energy_Program__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Energy_Program__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Contract_Status__c</field>
            <operation>equals</operation>
            <value>Active,Expired,Terminated</value>
        </filters>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Contract</value>
        </filters>
        <filters>
            <field>Name__c</field>
            <operation>notContain</operation>
            <value>Example</value>
        </filters>
        <filters>
            <field>Name__c</field>
            <operation>notContain</operation>
            <value>School of Energy</value>
        </filters>
        <filters>
            <field>Name__c</field>
            <operation>notEqual</operation>
            <value>NULL</value>
        </filters>
        <filters>
            <field>Name__c</field>
            <operation>notContain</operation>
            <value>Test</value>
        </filters>
        <label>Contracts missing Energy Programs</label>
    </listViews>
    <listViews>
        <fullName>Contracts_Expiring_this_Week</fullName>
        <columns>NAME</columns>
        <columns>Billing_Schedule_End_Date__c</columns>
        <columns>Contract__c</columns>
        <columns>Contract_Status__c</columns>
        <columns>Contract_Type__c</columns>
        <columns>Name__c</columns>
        <columns>Organization_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Billing_Schedule_End_Date__c</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Contracts Expiring this MONTH</label>
    </listViews>
    <listViews>
        <fullName>Copy_of_All_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Name__c</columns>
        <columns>Contract_Start_Date__c</columns>
        <columns>Billing_Start_Date__c</columns>
        <columns>Billing_Schedule_End_Date__c</columns>
        <columns>Organization_Name__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Auto_Renew_Cancelation_Deadline__c</columns>
        <columns>Auto_Renew_Declined__c</columns>
        <columns>Auto_Renew_Trigger_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Auto_Renew__c</field>
            <operation>equals</operation>
            <value>Yes</value>
        </filters>
        <filters>
            <field>Contract_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Auto Renew - All Open Contracts</label>
    </listViews>
    <listViews>
        <fullName>My_Contracts</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Name__c</columns>
        <columns>Auto_Renew__c</columns>
        <columns>Billing_Cycle__c</columns>
        <columns>Billing_Start_Date__c</columns>
        <columns>Billing_Schedule_End_Date__c</columns>
        <columns>Contract_Term__c</columns>
        <columns>Organization_Name__c</columns>
        <columns>Base_Year_End__c</columns>
        <columns>Base_Year_Start__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Contract__c</columns>
        <columns>Created_On__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Mine</filterScope>
        <label>My Contracts</label>
    </listViews>
</CustomObject>